 - Fix static scoreboard contest selection feature.
 - Fix a sed error message on internal compile error. 
 - Fix problem text links from scoreboard header.
 - Fix that country select fields are hidden when show_flags is off.
 - Fix encoding of multiline testcase descriptions in submit graphs.
 - Fix hardcoded domjudge username in SystemD service file.

Version 7.1.2 - 4 January 2020
------------------------------
 - Fix for dj_setup_database for REST and API password files.
 - API: only output test data count for jury members.
 - Fix correct contest for AJAX requests and scoreboard progress bar.
 - Fix output limit check when uploading new testcases
   (thanks Irfan Sofyana Putra).
 - Take into aacount unverified judgings when determining first to solve
   if verification is required, and do not show First To Solve when the
   problem has not been solved w.r.t. the restrictions.
 - Clarify documentation.

Version 7.1.1 - 20 October 2019
-------------------------------
 - Update documentation for Fedora (Thanks Marc Furon!).
 - Fix printing in jury interface.
 - Fix registration action.
 - Fix showing user last login info.
 - Fix balloon page when we do not have award info.
 - Fix logging events that require higher permissions than the user
   that triggers the action has.

Version 7.1.0 - 25 September 2019
---------------------------------
 - Minimum PHP version is now 7.1.3.
 - Use optimized composer autoloader.
 - During self-registration team name and affiliation can now be specified.
 - Judgedaemon will now keep retrying when an endpoint is unavailable.
 - Store external judgements and runs.
 - Move external CCS submission detail URL to database configuration.
 - Add support for showing shadow differences and external judgements.
 - Reduce dependencies of Judgedaemon.
 - Also install genrestapicredentials on judgehost.
 - Submit client will error early and explicitly when API calls fail.
 - Improve balloons page and make filtering persist when reloading.