@@ -39,7 +39,7 @@
 		}
 	],
 	"require": {
-		"php": "^7.1.3",
+		"php": "^7.2.5",
 		"ext-ctype": "*",
 		"ext-curl": "*",
 		"ext-gd": "*",
