@@ -15,6 +15,7 @@ Version 7.1.3 - DEV
  - Fix that country select fields are hidden when show_flags is off.
  - Fix encoding of multiline testcase descriptions in submit graphs.
  - Fix hardcoded domjudge username in SystemD service file.
+ - Document that PHP 7.2.5 is the minimum required version.
 
 Version 7.1.2 - 4 January 2020
 ------------------------------
